--- a/cvdikryparallaxeffect/index.html
+++ b/cvdikryparallaxeffect/index.html
@@ -404,8 +404,8 @@
 					<div class="swiper-slide">
 						<div class="card">
 							<div class="card-body">
-								<img src="img/project/IMG_20200715_181233.jpg" alt="" class="card-img-top rounded mb-3" />
-								<h6 class="fw-semibold">Base Wificar with NodemCu ESP8266</h6>
+								<img src="img/project/smarthome.png" alt="" class="card-img-top rounded mb-3" />
+								<h6 class="fw-semibold">Samrthome</h6>
 								<a href="#" class="text-orange">Detail Portofolio</a>
 							</div>
 						</div>
