--- a/cvdikryparallaxeffect/index.html
+++ b/cvdikryparallaxeffect/index.html
@@ -413,8 +413,8 @@
 					<div class="swiper-slide">
 						<div class="card">
 							<div class="card-body">
-								<img src="img/project/IMG_20200723_104113.jpg" alt="" class="card-img-top rounded mb-3" />
-								<h6 class="fw-semibold">Base EVP Wificar with NodemCu ESP8266</h6>
+								<img src="img/project/cuaca.png" alt="" class="card-img-top rounded mb-3" />
+								<h6 class="fw-semibold">Weather</h6>
 								<a href="#" class="text-orange">Detail Portofolio</a>
 							</div>
 						</div>
