--- a/cvdikryparallaxeffect/index.html
+++ b/cvdikryparallaxeffect/index.html
@@ -122,7 +122,7 @@
 						</div>
 						<div class="row py-3 border-bottom">
 							<div class="col-md-4">Alamat</div>
-							<div class="col-md-8">Dsn. Bentuksari, RT 06/ RW 06, Des.Sukajaya, Kec. Rajadesa, Kab. Ciamis</div>
+							<div class="col-md-8">Dsn. Bentuksari, RT 07/ RW 06, Des.Sukajaya, Kec. Rajadesa, Kab. Ciamis</div>
 						</div>
 						<div class="row py-3 border-bottom">
 							<div class="col-md-4">Status</div>
@@ -130,7 +130,7 @@
 						</div>
 						<div class="row py-3 border-bottom">
 							<div class="col-md-4">Handphone, email</div>
-							<div class="col-md-4">082240418501, dikrynurahman49@gmail.com</div>
+							<div class="col-md-4">0822******01, dikrynurahman49@gmail.com</div>
 						</div>
 					</div>
 					<div class="col-md-6">
