--- a/cvdikryparallaxeffect/index.html
+++ b/cvdikryparallaxeffect/index.html
@@ -458,7 +458,7 @@
 					</div>
 					<div class="d-flex align-items-center gap-2 mb-3">
 					  <i class="fas fa-phone text-orange fs-5"></i>
-					  <div class="mb-0">+62 82210498501</div>
+					  <div class="mb-0">+62 822******01</div>
 					</div>
 					<div class="d-flex align-items-center gap-2 mb-3">
 					  <i class="fas fa-envelope text-orange fs-5"></i>
@@ -466,7 +466,7 @@
 					</div>
 					<div class="d-flex align-items-center gap-2 mb-3">
 					  <i class="fas fa-globe text-orange fs-5"></i>
-					  <div class="mb-0">dikrynurahman.com</div>
+					  <div class="mb-0">github.com/dikry720p</div>
 					</div>
 				  </div>
 				  <div class="col-md-5">
